docs/css/custom.css
@import url('https://fonts.googleapis.com/css?family=Oswald');

.main-menu li {
  margin-right: 1em;
}

p, li, a, blockquote, figcaption {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
}

p, li {
  font-size: 20px;
  margin: 10px 0;
  max-width: 750px;
}

blockquote {
  border-left: .2em solid #ffcd00
}

figcaption {
  color: #888;
  font-size: 14px;
  margin-bottom: 16px;
  margin-top: -10px;
  text-align: center;
}

h1, h2, h3, h4, h5, h6, body,
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  font-family: 'Oswald', Arial, sans-serif;
  font-weight: 300;
}

.site-title, .list-title {
  text-transform: none;
}

h1, .site-title {
  font-size: 2.3em;
}

h2, .list-title {
  font-size: 2em;
}

.entry-content a {
  border-bottom: .11111em solid #ffcd00;
}

.site-description, .entry-genre {
  color: #888;
  font-size: 18px;
  font-style: normal;
}

.entry-genre {
  margin-bottom: 0;
}

.entry-subtitle {
  color: #444;
  font-size: 20px;
  font-style: normal;
}

.title {
  font-family: 'Oswald', Arial, sans-serif;
  font-weight: 300;
}

.meta span {
  color: #888;
}

.meta span, .list-item-title {
  font-size: 1em;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
}

.entry .meta span {
  color: #888;
  font-size: 14px;
  font-style: normal;
}

.copyright p {
  color: #888;
  font-size: 12px;
}

.comments-container #disqus_thread:before, .entry+.list-container:before, .entry-nav-links:before {
  border-bottom-color: #ffcd00;
}

code {
  background-color: #F8F8F8;
  border: 1px solid #CCC;
  border-radius: 8%;
  color: #000;
  font-size: 19px;
  padding: 3px 5px;
}

div.highlight {
  border: 2px dashed rgba(255, 205, 0, 0.7);
  border-radius: 2px;
}

pre {
  background-color: initial;
  color: initial;
  margin: 0;
  padding: 6px 12px;
}

